--- a/app/src/main/res/layout/activity_training_3_choosed_listview.xml
+++ b/app/src/main/res/layout/activity_training_3_choosed_listview.xml
@@ -20,7 +20,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <ListView
-        android:id="@+id/listViewTrainingActivity"
+        android:id="@+id/listViewTraining"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_below="@id/textViewProductSearch"
