--- a/app/src/main/res/layout/row_training_excercise.xml
+++ b/app/src/main/res/layout/row_training_excercise.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toTopOf="parent" />-->
 
         <TextView
-            android:id="@+id/trainingExcerciseID"
+            android:id="@+id/trainingID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="28dp"
