--- a/app/src/main/res/layout/row_diet_meal.xml
+++ b/app/src/main/res/layout/row_diet_meal.xml
@@ -15,7 +15,9 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <android.support.constraint.Guideline
             android:id="@+id/guidelineDiet2"
@@ -39,6 +41,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="MealTitle"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -49,6 +52,9 @@
             android:id="@+id/dietMealWeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="10"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,10 +66,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:text="20.0"
-            android:textColor="@android:color/holo_blue_dark"
-            android:textSize="11sp"
-            app:layout_constraintStart_toEndOf="@+id/textView5"
-            app:layout_constraintTop_toTopOf="@+id/textView5" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
+            app:layout_constraintStart_toEndOf="@+id/textView5" />
 
         <TextView
             android:id="@+id/dietMealFats"
@@ -71,10 +75,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:text="10.5"
-            android:textColor="@android:color/holo_orange_dark"
-            android:textSize="11sp"
-            app:layout_constraintStart_toEndOf="@+id/textView40"
-            app:layout_constraintTop_toTopOf="@+id/textView40" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView40"
+            app:layout_constraintStart_toEndOf="@+id/textView40" />
 
         <TextView
             android:id="@+id/dietMealCarbs"
@@ -82,10 +84,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:text="70.8"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="11sp"
-            app:layout_constraintStart_toEndOf="@+id/textView42"
-            app:layout_constraintTop_toTopOf="@+id/textView42" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView42"
+            app:layout_constraintStart_toEndOf="@+id/textView42" />
 
         <TextView
             android:id="@+id/dietMealID"
@@ -101,7 +101,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
+            android:layout_marginTop="8dp"
             android:text="123"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintEnd_toStartOf="@+id/textView3"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -109,9 +111,10 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="4dp"
             android:text="@string/proteins_short_colon"
-            android:textSize="11sp"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineDiet2"
+            app:layout_constraintHorizontal_bias="0.26"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dietMealWeight" />
 
@@ -120,18 +123,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/fats_short_colon"
-            android:textSize="11sp"
-            app:layout_constraintStart_toStartOf="@+id/guidelineDiet2"
-            app:layout_constraintTop_toTopOf="@+id/textView5" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineDiet1"
+            app:layout_constraintHorizontal_bias="0.46"
+            app:layout_constraintStart_toStartOf="@+id/guidelineDiet2" />
 
         <TextView
             android:id="@+id/textView42"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/carbs_short_colon"
-            android:textSize="11sp"
-            app:layout_constraintStart_toStartOf="@+id/guidelineDiet1"
-            app:layout_constraintTop_toTopOf="@+id/textView5" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView40"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintStart_toStartOf="@+id/guidelineDiet1" />
 
         <TextView
             android:id="@+id/textView2"
@@ -142,13 +147,17 @@
             android:text="@string/grams_short"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintStart_toEndOf="@+id/dietMealWeight"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/dietMealWeight" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
             android:text="@string/kcal_short"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -156,12 +165,11 @@
             android:id="@+id/textView54"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="1dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginStart="2dp"
             android:text="@string/grams_short"
-            android:textColor="@android:color/holo_blue_dark"
-            android:textSize="11sp"
-            app:layout_constraintStart_toEndOf="@+id/dietMealProteins"
-            app:layout_constraintTop_toTopOf="@+id/textView5" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/dietMealProteins"
+            app:layout_constraintStart_toEndOf="@+id/dietMealProteins" />
 
         <TextView
             android:id="@+id/textView56"
@@ -169,21 +177,18 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="1dp"
             android:text="@string/grams_short"
-            android:textColor="@android:color/holo_orange_dark"
-            android:textSize="11sp"
-            app:layout_constraintStart_toEndOf="@+id/dietMealFats"
-            app:layout_constraintTop_toTopOf="@+id/textView40" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/dietMealFats"
+            app:layout_constraintStart_toEndOf="@+id/dietMealFats" />
 
         <TextView
             android:id="@+id/textView59"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="1dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginStart="2dp"
             android:text="@string/grams_short"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="11sp"
-            app:layout_constraintStart_toEndOf="@+id/dietMealCarbs"
-            app:layout_constraintTop_toTopOf="@+id/textView42" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/dietMealCarbs"
+            app:layout_constraintStart_toEndOf="@+id/dietMealCarbs" />
 
         <TextView
             android:id="@+id/dietTimeStamp"
@@ -204,6 +209,13 @@
             app:layout_constraintStart_toEndOf="@+id/dietMealTitle"
             app:layout_constraintTop_toTopOf="@+id/dietMealTitle"
             app:srcCompat="@drawable/image_verified" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="52dp" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
