--- a/app/src/main/res/layout/row_training_excercise.xml
+++ b/app/src/main/res/layout/row_training_excercise.xml
@@ -51,13 +51,13 @@
             android:id="@+id/trainingExcerciseRestTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
             android:text="@string/s150"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/trainingExcerciseTitle" />
 
         <TextView
             android:id="@+id/trainingTimeStamp"
@@ -149,11 +149,12 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintHorizontal_bias="0.33"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/trainingExcerciseTitle"
+            app:layout_constraintTop_toTopOf="@+id/trainingExcerciseRestTime"
             app:srcCompat="@drawable/ic_access_alarm_grey_12dp" />
 
         <ImageView
