Change bar styles in DietActivity

--- a/app/src/main/res/layout/activity_diet_1.xml
+++ b/app/src/main/res/layout/activity_diet_1.xml
@@ -39,8 +39,12 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar5"
         android:layout_width="0dp"
-        android:layout_height="75dp"
-        android:background="@color/colorBackground"
+        android:layout_height="85dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/container_gray"
         android:elevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -128,9 +132,9 @@
         android:layout_height="wrap_content"
         android:elevation="2dp"
         android:text="Kcal"
-        app:layout_constraintBottom_toTopOf="@+id/progressBarKcal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBarKcal" />
 
     <TextView
         android:id="@+id/textViewDay"
@@ -147,9 +151,11 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="0dp"
         android:layout_height="3dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
         android:elevation="2dp"
         android:max="100"
         android:progress="0"
@@ -164,10 +170,11 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="3dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:elevation="2dp"
         android:max="100"
         android:progress="0"
@@ -182,10 +189,11 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="3dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:elevation="2dp"
         android:max="100"
         android:progress="0"
@@ -199,15 +207,18 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="3dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginStart="2dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:elevation="2dp"
         android:max="100"
         android:progress="0"
         android:progressTint="@android:color/holo_green_light"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbar5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewFats" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineDiet1"
@@ -228,7 +239,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.6666667" />
+        app:layout_constraintGuide_begin="256dp" />
 
     <ListView
         android:id="@+id/listViewDiet"
