--- a/app/src/main/res/layout/activity_training_4_details.xml
+++ b/app/src/main/res/layout/activity_training_4_details.xml
@@ -103,8 +103,8 @@
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/progressbar_circle_light_blue"
             android:indeterminate="false"
             android:max="100"
@@ -112,7 +112,7 @@
             android:progressDrawable="@drawable/progressbar_circle_blue"
             android:rotation="-90"
             app:layout_constraintBottom_toBottomOf="@+id/textViewTime"
-            app:layout_constraintEnd_toStartOf="@+id/textViewTime"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewTime"
             app:layout_constraintTop_toTopOf="@id/textViewTime" />
 
@@ -120,13 +120,15 @@
             android:id="@+id/textViewTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
             android:text="@string/time_example"
             android:textAppearance="@style/TextAppearance.AppCompat.Display2"
             android:typeface="monospace"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.45"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/progressBarCircle"
             app:layout_constraintTop_toBottomOf="@+id/checkBox"
             app:layout_constraintVertical_chainStyle="spread" />
 
@@ -135,11 +137,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
+            android:layout_marginRight="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:onClick="onClick"
             app:layout_constraintBottom_toBottomOf="@+id/textViewTime"
+            app:layout_constraintEnd_toStartOf="@+id/buttonResetTimer"
             app:layout_constraintStart_toEndOf="@+id/textViewTime"
             app:layout_constraintTop_toTopOf="@+id/textViewTime"
             app:srcCompat="@drawable/ic_play_arrow_white_24dp" />
@@ -150,15 +155,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:onClick="onClick"
             android:text="@string/reset"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/floatingButtonStartPause"
-            app:layout_constraintStart_toEndOf="@+id/floatingButtonStartPause"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/floatingButtonStartPause" />
 
         <SeekBar
