--- a/app/src/main/res/layout/row_diet_meal.xml
+++ b/app/src/main/res/layout/row_diet_meal.xml
@@ -40,11 +40,12 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="MealTitle"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintStart_toStartOf="@+id/guideline8"
             app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -113,9 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@string/proteins_short_colon"
-            app:layout_constraintEnd_toStartOf="@+id/guidelineDiet2"
-            app:layout_constraintHorizontal_bias="0.26"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/dietMealTitle"
             app:layout_constraintTop_toBottomOf="@+id/dietMealWeight" />
 
         <TextView
@@ -125,7 +124,7 @@
             android:text="@string/fats_short_colon"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
             app:layout_constraintEnd_toStartOf="@+id/guidelineDiet1"
-            app:layout_constraintHorizontal_bias="0.46"
+            app:layout_constraintHorizontal_bias="0.4"
             app:layout_constraintStart_toStartOf="@+id/guidelineDiet2" />
 
         <TextView
@@ -135,7 +134,7 @@
             android:text="@string/carbs_short_colon"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView40"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintHorizontal_bias="0.34"
             app:layout_constraintStart_toStartOf="@+id/guidelineDiet1" />
 
         <TextView
@@ -216,6 +215,20 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="52dp" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.10669975" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.90" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
