--- a/app/src/main/res/layout/row_main_training.xml
+++ b/app/src/main/res/layout/row_main_training.xml
@@ -26,7 +26,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:background="@drawable/container_blue"
+            android:background="@drawable/container_red"
             android:elevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -41,14 +41,14 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/button_diet_name"
+            android:text="@string/gym"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="@+id/toolbar"
             app:layout_constraintTop_toTopOf="@+id/toolbar" />
 
         <TextView
-            android:id="@+id/textViewCalories"
+            android:id="@+id/textViewLifted"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
@@ -65,13 +65,13 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="@string/calories_main"
+            android:text="@string/lifted"
             android:textColor="@android:color/white"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textViewCalories"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textViewLifted"
             app:layout_constraintEnd_toEndOf="@+id/toolbar" />
 
         <TextView
-            android:id="@+id/textViewCaloriesLimit"
+            android:id="@+id/textViewTrainingRest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -89,9 +89,9 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="8dp"
-            android:text="@string/limit"
+            android:text="@string/time_on_gym"
             android:textColor="@color/white_transparent"
-            app:layout_constraintEnd_toStartOf="@+id/textViewCaloriesLimit"
+            app:layout_constraintEnd_toStartOf="@+id/textViewTrainingRest"
             app:layout_constraintTop_toBottomOf="@+id/textViewType" />
 
     </android.support.constraint.ConstraintLayout>
