--- a/app/src/main/res/layout/row_main_training.xml
+++ b/app/src/main/res/layout/row_main_training.xml
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="@string/lifted"
+            android:text="@string/lifted_1"
             android:textColor="@android:color/white"
             app:layout_constraintBaseline_toBaselineOf="@+id/textViewLifted"
             app:layout_constraintEnd_toEndOf="@+id/toolbar" />
@@ -86,7 +86,7 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="8dp"
             android:text="@string/time_on_gym"
