--- a/app/src/main/res/layout/row_main_cardio.xml
+++ b/app/src/main/res/layout/row_main_cardio.xml
@@ -26,7 +26,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:background="@drawable/container_red"
+            android:background="@drawable/container_yellow"
             android:elevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -41,14 +41,14 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/gym"
+            android:text="@string/cardio"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="@+id/toolbar"
             app:layout_constraintTop_toTopOf="@+id/toolbar" />
 
         <TextView
-            android:id="@+id/textViewLifted"
+            android:id="@+id/textViewBurned"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
@@ -65,9 +65,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="@string/lifted_1"
+            android:text="@string/burned"
             android:textColor="@android:color/white"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textViewLifted"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textViewBurned"
             app:layout_constraintEnd_toEndOf="@+id/toolbar" />
 
         <TextView
@@ -76,9 +76,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="@string/kg_short"
+            android:text="@string/kcal_short"
             android:textColor="@android:color/white"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textViewLifted"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textViewBurned"
             app:layout_constraintEnd_toStartOf="@+id/textViewType" />
 
         <TextView
@@ -94,13 +94,13 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewType" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/textViewMinutes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="8dp"
-            android:text="@string/minutes_on_gym"
+            android:text="@string/minutes_on_cardio"
             android:textColor="@color/white_transparent"
             app:layout_constraintEnd_toStartOf="@+id/textViewTrainingTime"
             app:layout_constraintTop_toBottomOf="@+id/textViewType" />
